@@ -3,6 +3,7 @@ CRAIGSLIST REPORTER
 <%@summaries.each do |summary| -%>
    <%=summary[:search].name %>
    <% summary[:postings].collect do |post| -%>
+      <% if summary[:postings].length > 0 %>
       <%='%s : %s %s %s %s' % [
 			post.post_date.strftime('%b %d'),
 			post.label,
@@ -10,6 +11,8 @@ CRAIGSLIST REPORTER
 			(post.has_pic_or_img?) ? ' [img]': '',
 			post.url
       ] -%>
-
+      <% else %>
+      No new postings were found to match the search criteria.
+      <% end -%>
    <% end %>
 <% end -%>
